feat(migration): setting up initial running methods in Android

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -80,9 +80,9 @@ android {
 repositories {
   mavenCentral()
   google()
-  // maven {
-  //   url 'https://zendesk.jfrog.io/zendesk/repo'
-  // }
+  maven {
+    url 'https://zendesk.jfrog.io/zendesk/repo'
+  }
 }
 
 def kotlin_version = getExtOrDefault("kotlinVersion")
@@ -93,10 +93,10 @@ dependencies {
   //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native:+"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-  // implementation "androidx.appcompat:appcompat:1.6.1+"
-  // implementation group: "com.zendesk", name: "support", version: "5.2.0"
-  // implementation group: "com.zendesk", name: "chat", version: "3.4.0"
-  // implementation group: "com.zendesk", name: "messaging", version: "5.4.0"
-  // implementation group: "com.zendesk", name: "answerbot", version: "3.2.0"
+  implementation "androidx.appcompat:appcompat:1.6.1+"
+  implementation group: "com.zendesk", name: "support", version: "5.2.0"
+  implementation group: "com.zendesk", name: "chat", version: "3.4.0"
+  implementation group: "com.zendesk", name: "messaging", version: "5.4.0"
+  implementation group: "com.zendesk", name: "answerbot", version: "3.2.0"
 }
 
