--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "clean": "del-cli android/build example/android/build example/android/app/build example/ios/build lib",
     "prepare": "bob build",
-    "release": "release-it"
+    "release": "release-it",
+    "typedoc": "typedoc"
   },
   "keywords": [
     "react-native",
@@ -73,6 +74,8 @@
     "react-native-builder-bob": "^0.20.0",
     "release-it": "^15.0.0",
     "turbo": "^1.10.7",
+    "typedoc": "^0.25.4",
+    "typedoc-material-theme": "^1.0.1",
     "typescript": "^5.0.2"
   },
   "resolutions": {
